src/other/mico-2.3.12/test/idl/error/case3.idl

/*
 * Reference to L in interface D is ambiguous.
 */

interface B1
{
  const long L = 1;
};

interface B2
{
  const long L = 12;
};

interface D : B1, B2
{
  typedef float A[ L ];
};
